--- a/index.html
+++ b/index.html
@@ -30,40 +30,42 @@ body
 
 <div id="game"></div>
 <div id="readme">
-<h2>Plague-ify</h2>
+<h2>Blunt Persona</h2>
 <ul>
 
 <li><strong>High Concept:</strong>
-You are a zombie, and you must convert humans into more zombies so your ravenous piles of corpses can build as high as the tallest skyscrapers.
+You catch a person who doesn't want to be thrown at enemies and promptly carry them around and throw them at enemies. 
 </li>
 
 <li><strong>Player Experience Goals:</strong>
-Critical Thinking and Tool Application skill development. The player should feel tested to make use of the zombies they have in order to reach higher platforms in innovative ways.
+Resource Management. Also, physics and the willingness to do what no on else will for the sake of all that is good.
 </li>
 
 <li><strong>Genre:</strong>
-Platformer, Zombie
+Platformer, Cartoonish Violence
 </li>
 
 <li><strong>Game play:</strong>
-Arrow Keys to move. Holding Spacebar initiates "Pile" mode. When in Pile mode, tap left or right to send the zombie minions to the nearest platform in that direction, wherein they will proceed to pile up on top of each other, allowing you to climb up (run over to them using left or right, whichever you chose, and then press and hold up to climb. Do NOT let go of spacebar when climbing or the stack will crumble!).
+Arrow keys to move, catch the purple block and carry him over your head (automatic on contact). Use A and D to throw the block once caught in said direction (A for left, D for right). The current motion of your block matters (at least horizontally). Use the purple block to eliminate the yellow blocks (The "Jitters"). The purple block doesn't want to be thrown at the yellow blocks, and will try to run away from you.
 
-Note: You CAN let go of spacebar, and in the current bugged build you will find interesting results. Feel free to play with it. The current stage can be "cleared" without bugs, but to achieve "ultra clear" (the highest peak on the map) you may need to get creative.
+You can Wall Jump on a collision with a wall. It will be your friend. Use it wisely. Or just frequently.
 </li>
 
 <li><strong>Prototype goal:</strong>
-Wanted to try limiting the player's mobility to a resource. This way, with some fine-tuning of the mechanic details, the player should be able to leave the area to acquire more zombies, then return when they can build a larger ladder. Zombies can sometimes be seperated from the player too, originally a glitch, but potentially a future feature, allowing players to move zombies apart from themselves in a sort of "all-shift" fashion.
+Taking another sideways look at platforming, this time from the combat perspective. A bad throw can result in you having to chase down your ammunition for some time. Of course, the current build doesn't have lethal enemies (they do nothing, in fact), but eventually that's the goal. Maybe add spike pits too...
+
+Anyways, the goal for the prototype was to test the interest in using a mobile and unwilling weapon with limited functionality. It was a hit here at the dorm.
 </li>
 
 <li><strong>Features:</strong>
 Blocks
-Zombie Teamwork Building!
-Ladders!
+Use the Prince/Princess (slave?) you saved (captured?) to defeat their (your?) foes!
+Jitters!
 More Blocks!
 </li>
 
 <li><strong>Setting/Premise:</strong>
-You are the beginning of the zombie apocalypse. Spread the plague to all the heights!
+Uknown at this time.
 </li>
 
 <li><strong>Story:</strong>
@@ -71,19 +73,20 @@ See Setting/Premise
 </li>
 
 <li><strong>Target Audience:</strong>
-Resource Management and Platform/Puzzler players
+Platform/Puzzler players
 </li>
 
 <li><strong>Play time:</strong>
-1-4 minutes, there isn't a finished level really, just a small obstacle course to view the mechanic.
+1-4 minutes, there isn't a finished level really, though there is about (exactly) 20 yellow blocks to destroy with your friend.
 </li>
 
 <li><strong>Strategies:</strong>
-Glitch Innovation at present
+Using your momentum to lengthen or shorten throws.
+Wall Jump to maintan mobility whilst carrying the captive.
 </li>
 
 <li><strong>Estimated Schedule:</strong>
-Came along better than I expected given that I only actually put in probably 6 hours or less. Of course a final version probably wouldn't be composed of blocks (though I d oenjoy simplistic graphics like that, and not only because they require no artistic stress on my part), and you would need a full set of levels. Those can be worked on pretty easily once the mechanic is fine tuned. Current problem with backtracking, since the zombies only go to a ledge they can't move over. Will need to implement stronger control over the pile mode so that they can ladder in arbitrary locations. Estimated time to finish mechanics: 3-6 weeks. Art Assets and Animations: You'd need to ask an artist/animator, cause bump that, I'm never touching art again. Level design and construction: Depends on the quantity and complexity, anywhere from 4-16 weeks after mechanics are complete, independently of the artwork.
+Went together pretty easily this time I'd say. Needs more work around the physics of course (main component, ideally). As with all of my projects, art is another thing entirely. I'd say with some dedicated work time (full time work, really) you could have a servicable demo or even small game together in a month, maybe two.
 </li>
 
 <li><strong>Team:</strong>
