--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Zombie Conversion!</title>
+    <title>Throw the [Person]!</title>
     <script src="js/phaser.js"></script>
 	<script src="js/phaser.min.js"></script>
 	<script src="js/DA5_Boot.js"></script>
